--- a/sp_style.css
+++ b/sp_style.css
@@ -35,7 +35,6 @@ ul{
   .logo {
     display: inline-block;
     font-size: 33px;
-    position: fixed;
     z-index: 10;
   }
   .logo span {
@@ -52,6 +51,8 @@ ul{
 
   .navbar img{
     cursor: pointer;
+    width: 30px;
+    height: 30px;
   }
   .navbar ul{
     background: #EEEEEE;
@@ -93,18 +94,18 @@ ul{
   .top {
     background-image: url(img/sample.jpg);
     background-size: cover;
+    background-position: center ;
     height: 300px;
-    width: 360px;
+    width: 100%;
     padding: 0;
     top: 50px;
-    margin: 10px;
+    margin: 0;
     position: relative;
     text-align: center;
-
   }
   .top .overlay {
     position: absolute;
-    width: 360px;
+    width: 100%;
     height: 300px;
     background-color: rgba(10, 6, 5, 0.7);
     z-index: 2;
@@ -194,7 +195,7 @@ ul{
     display: none;
   }
   .menu2 .menu-list{
-    margin:10px; padding:10px; border:5px solid silver;
+    margin:10px; padding:10px; border:5px solid white;
     width: 325px;
   }
 
@@ -248,6 +249,8 @@ ul{
   .member h3{
     width: 150px;
   }
+  /*シャドウ
+  全体を薄いグレー*/
 
   /* 店舗情報 */
   .store{
@@ -270,11 +273,13 @@ ul{
       right:50px;
       bottom:20px;
       cursor:pointer;
+      visibility: hidden;
   }
   .pagetop img {
     border-radius: 50%;
     width: 80px;
     height: 75px;
+
   }
 
   footer{
