--- a/sp_style.css
+++ b/sp_style.css
@@ -5,20 +5,19 @@
 
 body{
    font-family: "游明朝体", "Yu Mincho", YuMincho, serif;
+   background-color: #FDF5E6;
  }
 
-a{
+ a{
    color: black;
    text-decoration: none;
  }
 
-a:hover{
-  color: #cccccc;
-}
 
-ul{
+
+/*ul{
   list-style: none;
-}
+}*/
 
   /* header */
   header {
@@ -26,69 +25,60 @@ ul{
     padding-top: 10px;
     padding-left: 10px;
     /*margin:4px 10px;*/
-    height: 60px;
-    width: 365px;
+    height: 86px;
+    width: 100%;
     position: fixed;
     z-index: 9;
     background-color: white;
   }
   .logo {
     display: inline-block;
-    font-size: 33px;
+    font-size: 30px;
     z-index: 10;
   }
   .logo span {
-    font-size: 18px
+    font-size: 15px;
   }
-
   .navbar{
-    display: inline-block;
-    position: fixed;
-    left: 300px;
-    z-index: 10;
-    width:100px;
-  }
-
-  .navbar img{
-    cursor: pointer;
-    width: 30px;
-    height: 30px;
-  }
-  .navbar ul{
-    background: #EEEEEE;
-    border-radius: 10px;
-    display: none;
-    position: absolute;
-    z-index: 4;
-  }
-  .navber ul li:hover{
-  　background-color: silver;
+    background: white;
+    width: 100%;
   }
   .navbar .pc-design{
     display: none;
   }
-  /*.navber li a{
-    display: block;
-    border-left: 8px solid #474655;
-    border-top: 1px solid #474655;
-    border-right: 1px solid #474655;
-    border-bottom: 1px solid #474655;
-    background-color: #fff;
-    padding: 3px 10px;
-    text-decoration: none;
-    color: #333;
-    width: 150px;
-    margin: 1px 0px;
-    text-align: left;
-    font-size: 14px;
-  }*/
 
-  /* .navbar ul li {
-      display: inline-block;
-      margin-top: 12px;
-      margin-right: 35px;
-      font-size: 25px;
-  } */
+  .navbar ul li {
+    display: inline-block;
+    /*margin-top: 12px;
+    margin-right: 35px;*/
+    font-size: 17px;
+  }
+  .navbar li{
+    color: black;
+    width: 23%;
+    float: left;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    background-color: white;
+    border: 1px solid white;
+    border-bottom: 3px solid #CBFFD3;
+  }
+  .navbar li a{
+    display: block;
+    padding: 0 2px;
+  }
+  .navbar img{
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    display: none;
+  }
+  .navbar li:hover{
+    color: #E7DA66;
+    border-bottom: 3px solid #F0E475;
+  }
+
 
   /* トップ画面 */
   .top {
@@ -144,9 +134,9 @@ ul{
   /* 飯塚製麺所Rとは */
   .about .text {
     padding-top: 10px;
-    font-size: 22px;
-    margin: 0 10px;
-    width: 365px;
+    font-size: 21px;
+    margin: 0 20px;
+    width: 345px;
   }
 
 
@@ -161,8 +151,10 @@ ul{
     background-color: white;
     text-align: center;
     margin-top: 20px;
-    margin:10px; padding:10px; border:5px solid white;
-    width: 325px;
+    margin:10px;
+    border:5px solid white;
+    width: 345px;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
   }
   .picky div{
     display: inline-block;
@@ -177,14 +169,15 @@ ul{
     font-size: 13px;
   }
   .picky img{
-    height: 90px;
-    width: 100px;
+    height: 110px;
+    width: 120px;
     margin-top: 30px;
     margin-left: 5px;
     border-radius: 10px;
+    text-align: center;
   }
   .picky .text-contents{
-    width: 140px;
+    width: 150px;
     text-align: left;
     margin: 5px;
   }
@@ -195,22 +188,58 @@ ul{
     display: none;
   }
   .menu2 .menu-list{
-    margin:10px; padding:10px; border:5px solid white;
-    width: 325px;
+    /*margin:10px; padding:10px; border:5px solid white;*/
+    width: 100%;
+  }
+  table.brwsr1 {
+    font-size: 18px;
+    border-collapse: separate;
+    border-spacing: 0px 1px;
+
   }
 
-  .menu2 .name {
-    font-size: 28px;
-    margin-bottom: 0;
+  table.brwsr1 th {
+    padding: 12px;
+    vertical-align: middle;
+    text-align: left;
+    border-bottom: #999 1px solid;
+    color: #fff;
+  }
+
+  table.brwsr1 td {
+    padding: 12px;
+    vertical-align: middle;
+    text-align: left;
+    border-bottom: #999 1px solid;
+    font-size: 11px;
+  }
+
+  table.brwsr1 th.r1 {
+    width: 45%;
+    border-right: #999 1px solid;
+    background: #447791;
     text-align: center;
   }
-  .menu2 .price {
-    font-size: 25px;
-    margin-top: 10px;
-    text-align: right;
+
+  table.brwsr1 th.r2,
+  table.brwsr1 td.r2 {
+    width: 45%;
+    border-left: #fff 1px solid;
+    border-right: #999 1px solid;
+    background: #5893b1;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+  }
+
+  table.brwsr1 th.r2 {
+    text-align: center;
   }
   .menu2 .under2{
     border-bottom: solid 2px red;
+  }
+  .menu2 .under3{
+    font-size: 15px;
   }
 
   /* メンバー紹介 */
@@ -225,32 +254,35 @@ ul{
     text-align: center;
     margin: 10px;
     width: 365px;
-    margin:10px; padding:10px; border:5px solid black;
+    margin:10px; padding:10px; border:5px solid white;
     width: 325px;
+    background-color: white;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.4);
   }
   .member .job{
-    font-size: 30px;
+    font-size: 25px;
     font-weight: lighter;
     margin: 5px;
+    text-align: left;
   }
   .member .name{
-    font-size: 30px;
+    font-size: 33px;
     font-weight: lighter;
     margin: 2px;
+    text-align: left;
   }
   .member img{
     border-radius: 50%;
-    width: 150px;
+    width: 135px;
     text-align: left;
   }
   .member p{
     margin-top:5px;
+    text-align: left;
   }
   .member h3{
     width: 150px;
   }
-  /*シャドウ
-  全体を薄いグレー*/
 
   /* 店舗情報 */
   .store{
@@ -285,7 +317,7 @@ ul{
   footer{
     margin-top: 80px;
     font-size: 20px;
-    background-color: white;
+    background-color: #FDF5E6;
     color: black;
     text-align: center;
     padding: 10px;
