--- a/pc_style.css
+++ b/pc_style.css
@@ -130,7 +130,60 @@ header {
 }
 
 /* メニュー */
-.menu {
+.menu2 .menu-list{
+  width: 100%;
+}
+table.brwsr1 {
+  font-size: 35px;
+  border-collapse: separate;
+  border-spacing: 0px 1px;
+  width: 100%;
+
+}
+
+table.brwsr1 th {
+  padding: 12px;
+  vertical-align: middle;
+  text-align: left;
+  border-bottom: #999 1px solid;
+  color: black;
+}
+
+table.brwsr1 td {
+  padding: 12px;
+  vertical-align: middle;
+  border-bottom: #999 1px solid;
+  font-size: 11px;
+}
+
+table.brwsr1 th.r1 {
+  width: 40%;
+  border-right: #999 1px solid;
+  background: #FFDEAD;
+  text-align: center;
+}
+
+table.brwsr1 th.r2,
+table.brwsr1 td.r2 {
+  width: 30%;
+  border-left: #fff 1px solid;
+  border-right: #999 1px solid;
+  background: #FFE4C4;
+  font-size: 35px;
+  color: black;
+  text-align: center;
+}
+
+table.brwsr1 th.r2 {
+  text-align: center;
+}
+.menu2 .under2{
+  border-bottom: solid 2px red;
+}
+.menu2 .under3{
+  font-size: 25px;
+}
+/*.menu {
   text-align: center;
 }
 .menu img {
@@ -149,7 +202,7 @@ header {
 
 .menu2{
   display: none;
-}
+}*/
 
 /* メンバー紹介 */
 .members{
