--- a/sp_style.css
+++ b/sp_style.css
@@ -40,7 +40,6 @@ body{
     font-size: 15px;
   }
   .navbar{
-    background: white;
     width: 100%;
   }
   .navbar .pc-design{
@@ -132,11 +131,17 @@ body{
   }
 
   /* 飯塚製麺所Rとは */
+  .about h2{
+    margin-bottom: 10px;
+  }
   .about .text {
     padding-top: 10px;
     font-size: 21px;
-    margin: 0 20px;
+    margin-left: 15px;
     width: 345px;
+    background-color: white;
+    padding-left: 5px;
+    box-shadow: 0 0 16px gray;
   }
 
 
@@ -171,8 +176,9 @@ body{
   .picky img{
     height: 110px;
     width: 120px;
-    margin-top: 30px;
-    margin-left: 5px;
+    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 10px;
     border-radius: 10px;
     text-align: center;
   }
@@ -203,7 +209,7 @@ body{
     vertical-align: middle;
     text-align: left;
     border-bottom: #999 1px solid;
-    color: #fff;
+    color: black;
   }
 
   table.brwsr1 td {
@@ -217,7 +223,7 @@ body{
   table.brwsr1 th.r1 {
     width: 45%;
     border-right: #999 1px solid;
-    background: #447791;
+    background: #FFDEAD;
     text-align: center;
   }
 
@@ -226,9 +232,9 @@ body{
     width: 45%;
     border-left: #fff 1px solid;
     border-right: #999 1px solid;
-    background: #5893b1;
+    background: #FFE4C4;
     font-size: 20px;
-    color: white;
+    color: black;
     text-align: center;
   }
 
@@ -252,7 +258,7 @@ body{
   }
   .member{
     text-align: center;
-    margin: 10px;
+    /*margin: 10px;*/
     width: 365px;
     margin:10px; padding:10px; border:5px solid white;
     width: 325px;
@@ -275,6 +281,7 @@ body{
     border-radius: 50%;
     width: 135px;
     text-align: left;
+    margin-right: 10px;
   }
   .member p{
     margin-top:5px;
